--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -48,7 +48,11 @@
                             <p class="my-0 small text-muted">Qty: {{ item.quantity }}</p>
                         </div>
                         <div class="col-3 text-right">
-                            <p class="my-0 small text-muted">€{{ item.album.price | calc_subtotal:item.quantity }}</p>
+                            {% if item.album.special_offer_price %}
+                                <p class="my-0 text-muted">€{{ item.album.special_offer_price | calc_subtotal:item.quantity }}</p>
+                            {% else %}
+                                <p class="my-0 text-muted">€{{ item.album.price | calc_subtotal:item.quantity }}</p>
+                            {% endif %}
                         </div>
                     </div>
                 {% endfor %}
