--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -62,7 +62,9 @@
                             </p>
                         </div>
                         <div class="col-12 col-md-8 text-md-right">
-                            <p class="small mb-0">{{ item.quantity }} @ €{{ item.product.price }} each</p>
+                            <p class="small mb-0">
+                                {{ item.quantity }} @ €{% if item.product.special_offer_price %}{{ item.product.special_offer_price }} {% else %}{{ item.product.price }}{% endif %} each
+                            </p>
                         </div>
                     </div>
                     {% endfor %}
