--- a/products/templates/products/albums.html
+++ b/products/templates/products/albums.html
@@ -75,10 +75,10 @@
                                 <div class="card-body pb-0 pt-0">
                                     <i class="fa fa-tags" aria-hidden="true"></i><a href="{% url 'albums' %}?genre={{ album.genre }}" class="mb-0 mt-0"> {{ album.genre }}</a>
                                 </div>
-                                <div class="card-footer bg-white pt-0 border-0 text-left">
+                                <div class="card-footer pt-0 border-0 text-left">
                                     <div class="row">
                                         <div class="col-12">
-                                            {% if album.special_offer_category == "deal" or album.special_offer_category == "clearance" %}
+                                            {% if album.special_offer_price %}
                                                 <small class="text-left text-muted"><s>€{{ album.price }}</s></small>
                                                 <p class="lead mt-0 mb-0 text-left font-weight-bold">€{{ album.special_offer_price }}</p>
                                             {% else %}
@@ -89,12 +89,14 @@
                                             {% else %}
                                                 <p class="mb-0"><small class="text-muted">No Rating</small></p>
                                             {% endif %}
-                                            {% if request.user.is_superuser %}
-                                                <small class="mb-0 text-left">
-                                                    <a href="{% url 'edit_album' album.id %}">Edit</a> | 
-                                                    <a class="text-danger" href="{% url 'delete_album' album.id %}">Delete</a>
-                                                </small>
-                                            {% endif %}
+                                            <div class="card-footer pt-0 border-0 text-left">
+                                                {% if request.user.is_superuser %}
+                                                    <small class="mb-0 text-left">
+                                                        <a href="{% url 'edit_album' album.id %}">Edit</a> | 
+                                                        <a class="text-danger" href="{% url 'delete_album' album.id %}">Delete</a>
+                                                    </small>
+                                                {% endif %}
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -125,7 +127,7 @@
             </div>
         </div>
     </div>
-    <div class="btt-button shadow-sm rounded-0 border border-black">
+    <div class="btt-button shadow-sm">
         <a class="btt-link d-flex h-100">
             <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
         </a>	
