Added UserProfile admin, added first and last name fields to UserProfile, removed body background.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -2,7 +2,7 @@
 
 body { 
     font-family: 'Righteous', cursive;
-    background: url('/media/background2.png') repeat;
+    background-color: #DEDEDE;
     color: black;
 }
 
