--- a/products/templates/products/albums.html
+++ b/products/templates/products/albums.html
@@ -48,6 +48,9 @@
                     </div>
                 </div>
                 <div class="row">
+                    {% if albums.count == 0 %}
+                        <p>Sorry, there aren't any albums that match your query.</p>
+                    {% endif %}
                     {% for album in albums %}
                         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                             <div class="card h-100 border-0">
@@ -60,12 +63,14 @@
                                         <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ album.name }}">
                                     </a>
                                 {% endif %}
-                                <div class="card-body pb-0">
-                                    <p class="mb-0">{{ album.name }}</p>
-                                </div>
+                                {% if album.name %}
+                                    <div class="card-body pb-0">
+                                        <a href="{% url 'album_detail' album.id %}" class="mb-0">{{ album.name }}</a>
+                                    </div>
+                                {% endif %}
                                 {% if album.artist %}
                                     <div class="card-body pb-0 pt-0">
-                                        <p class="mb-0 mt-0">by {{ album.artist }}</p>
+                                        by <a href="{% url 'artist_detail' album.artist.id %}" class="mb-0 mt-0">{{ album.artist }}</a>
                                     </div>
                                 {% else %}
                                     <div class="card-body pb-0 pt-0">
